--- a/.github/workflows/locust-test.yml
+++ b/.github/workflows/locust-test.yml
@@ -1,41 +1,42 @@
-name: Locust Stress Test
+name: Stress Test
 
-On:
+on:
   push:
     branches:
-       -main
+      - main
   workflow_dispatch:
-           - cron: '0 2 * * *' # every day at 2 AM
+  schedule:
+    - cron: '0 2 * * *' # every day at 2 AM
+
 jobs:
-    stress-test:
-        runs-on: ubuntu-latest
+  stress-test:
+    runs-on: ubuntu-latest
 
-        steps:
-        - name: Checkout code
-          uses: actions/checkout@v5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
 
-        - name: Set up a python
-          uses: actions/setup-python@v6
-          with:
-            python-version: '3.13' 
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.13'
 
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
-        
-        - name: Run Locust Stress Test
-          run: |
-            locust -f locustfile.py \
-            --headless \
-            -u 1000 -r 100 \
-            --run-time 2m \
-            -H https://jsonplaceholder.typicode.com \
-            --csv=locust_report
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-        - name: upload CSV Reports
-          uses: actions/upload-artifact@v4
-          with:
-            name: locust-csv-report
-            path: |
-                locust_report_*.csv
+      - name: Run Locust Stress Test
+        run: |
+          locust -f locustfile.py \
+          --headless \
+          -u 1000 -r 100 \
+          --run-time 2m \
+          -H https://jsonplaceholder.typicode.com \
+          --csv=locust_report
+
+      - name: Upload CSV Reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: locust-csv-report
+          path: locust_report_*.csv
